Holiday_#1 Add Create and Update, refactoring

--- a/resources/src/main/resources/messages.properties
+++ b/resources/src/main/resources/messages.properties
@@ -25,7 +25,11 @@ DOM-016=Já possui uma cidade que contém o mesmo nome e estado, favor informa o
 DOM-017=Já possui uma cidade que contém o mesmo código e estado, favor informa outros dados.
 DOM-018=Já possui um feriado fixo que contém o mesmo dia, mês e país, favor informa outros dados.
 DOM-019=O dia e o mês informado está invalido, favor informa outro dia e mês.
+DOM-020=O Dia procurado não existe.
+DOM-021=Já possui um feriado com esse dia, favor informa outro dia.
+DOM-022=O tipo de feriado informado é necessário que você informa o horário que ele se inicia.
 
+DOM-997=Acesso negado.
 DOM-998=Os tipos permitidos para ''{0}'' de campo são os seguintes: {1}.
 DOM-999=Ocorreu um erro ao processar a solicitação.
 
