--- a/resources/src/main/resources/messages_en.properties
+++ b/resources/src/main/resources/messages_en.properties
@@ -25,7 +25,11 @@ DOM-016=You already have a city that contains the same name and state, please in
 DOM-017=You already have a city that contains the same code and state, please inform other data.
 DOM-018=You already have a fixed holiday that contains the same day, month and country, please inform other data.
 DOM-019=The day and month reported is invalid, please inform another day and month.
+DOM-020=The wanted Day does not exist
+DOM-021=You Already have a holiday with that day, please inform another day.
+DOM-022=The type of holiday you are told that you must inform the time it starts.
 
+DOM-997=Access denied.
 DOM-998=Allowed types for field ''{0}'' are as follows: {1}.
 DOM-999=An error occurred while processing the request.
 
