Scheduled_Request Init

--- a/resources/src/main/resources/messages.properties
+++ b/resources/src/main/resources/messages.properties
@@ -28,6 +28,9 @@ DOM-019=O dia e o mês informado está invalido, favor informa outro dia e mês.
 DOM-020=O Dia procurado não existe.
 DOM-021=Já possui um feriado com esse dia, favor informa outro dia.
 DOM-022=O tipo de feriado informado é necessário que você informa o horário que ele se inicia.
+DOM-023=Já existe uma requisição cadastra no sistema, verifica os parâmetros informado.
+DOM-024=Não foi localizado o parâmetro para validar a requisição.
+
 
 DOM-997=Acesso negado.
 DOM-998=Os tipos permitidos para ''{0}'' de campo são os seguintes: {1}.
