--- a/resources/src/main/resources/messages_en.properties
+++ b/resources/src/main/resources/messages_en.properties
@@ -28,6 +28,8 @@ DOM-019=The day and month reported is invalid, please inform another day and mon
 DOM-020=The wanted Day does not exist
 DOM-021=You Already have a holiday with that day, please inform another day.
 DOM-022=The type of holiday you are told that you must inform the time it starts.
+DOM-023=There is already a request registers in the system, checks the parameters reported.
+DOM-024=The parameter to validate the request was not found.
 
 DOM-997=Access denied.
 DOM-998=Allowed types for field ''{0}'' are as follows: {1}.
