Add Cache and Idempotent and Tag

--- a/resources/src/main/resources/messages.properties
+++ b/resources/src/main/resources/messages.properties
@@ -30,6 +30,8 @@ DOM-021=Já possui um feriado com esse dia, favor informa outro dia.
 DOM-022=O tipo de feriado informado é necessário que você informa o horário que ele se inicia.
 DOM-023=Já existe uma requisição cadastra no sistema, verifica os parâmetros informado.
 DOM-024=Não foi localizado o parâmetro para validar a requisição.
+DOM-025=A Tag procurada não existe.
+DOM-026=Já possuui uma tage cadastrada com esse código.
 
 
 DOM-997=Acesso negado.
