--- a/resources/src/main/resources/messages_en.properties
+++ b/resources/src/main/resources/messages_en.properties
@@ -30,6 +30,8 @@ DOM-021=You Already have a holiday with that day, please inform another day.
 DOM-022=The type of holiday you are told that you must inform the time it starts.
 DOM-023=There is already a request registers in the system, checks the parameters reported.
 DOM-024=The parameter to validate the request was not found.
+DOM-025=The searched tag does not exist.
+DOM-026=I have already had a tage registered with this code.
 
 DOM-997=Access denied.
 DOM-998=Allowed types for field ''{0}'' are as follows: {1}.
