Adjusting Jobs and Batch, improving cache control.

--- a/resources/src/main/resources/messages.properties
+++ b/resources/src/main/resources/messages.properties
@@ -32,7 +32,8 @@ DOM-023=Já existe uma requisição cadastra no sistema, verifica os parâmetros
 DOM-024=Não foi localizado o parâmetro para validar a requisição.
 DOM-025=A Tag procurada não existe.
 DOM-026=Já possuui uma tage cadastrada com esse código.
-
+DOM-027=Não foi configurado os Dias no Sistema, favor iniciar o sistema corretamente.
+DOM-028=Data inicial é superior a data final.
 
 DOM-997=Acesso negado.
 DOM-998=Os tipos permitidos para ''{0}'' de campo são os seguintes: {1}.
