--- a/resources/src/main/resources/messages_en.properties
+++ b/resources/src/main/resources/messages_en.properties
@@ -32,6 +32,8 @@ DOM-023=There is already a request registers in the system, checks the parameter
 DOM-024=The parameter to validate the request was not found.
 DOM-025=The searched tag does not exist.
 DOM-026=I have already had a tage registered with this code.
+DOM-027=Days on the System has not been set, please start the system correctly.
+DOM-028=Start date is higher than end date.
 
 DOM-997=Access denied.
 DOM-998=Allowed types for field ''{0}'' are as follows: {1}.
