Tag add link Tag Day

--- a/resources/src/main/resources/messages.properties
+++ b/resources/src/main/resources/messages.properties
@@ -11,10 +11,10 @@ DOM-002=A configuração procurada não existe, favor verificar com a equipe de 
 DOM-003=A aplicação já foi inicializada, não é possível refazer o processo.
 DOM-004=O nome do país informado está invalido ou não contém na base.
 DOM-005=O Feriado fixo procurado não existe.
-DOM-006=O País procurado não existe.
-DOM-007=O Estado procurado não existe.
-DOM-008=A Cidade procurada não existe.
-DOM-009=O Feriado procurado não existe.
+DOM-006=O País informado não existe.
+DOM-007=O Estado informado não existe.
+DOM-008=A Cidade informada não existe.
+DOM-009=O Feriado informado não existe.
 DOM-010=Já possui um país com o nome informado, favor informa outro nome.
 DOM-011=Já possui um país com o código informado, favor informa outro código.
 DOM-012=Já possui um país com a sigla informada, favor informa outra sigla.
@@ -25,7 +25,7 @@ DOM-016=Já possui uma cidade que contém o mesmo nome e estado, favor informa o
 DOM-017=Já possui uma cidade que contém o mesmo código e estado, favor informa outros dados.
 DOM-018=Já possui um feriado fixo que contém o mesmo dia, mês e país, favor informa outros dados.
 DOM-019=O dia e o mês informado está invalido, favor informa outro dia e mês.
-DOM-020=O Dia procurado não existe.
+DOM-020=O Dia informado não existe.
 DOM-021=Já possui um feriado com esse dia, favor informa outro dia.
 DOM-022=O tipo de feriado informado é necessário que você informa o horário que ele se inicia.
 DOM-023=Já existe uma requisição cadastra no sistema, verifica os parâmetros informado.
@@ -34,7 +34,9 @@ DOM-025=A Tag procurada não existe.
 DOM-026=Já possuui uma tage cadastrada com esse código.
 DOM-027=Não foi configurado os Dias no Sistema, favor iniciar o sistema corretamente.
 DOM-028=Data inicial é superior a data final.
+DOM-029=A data: {0}, já possui vínculo com a Tag.
 
+DOM-996=Acesso negado.
 DOM-997=Acesso negado.
 DOM-998=Os tipos permitidos para ''{0}'' de campo são os seguintes: {1}.
 DOM-999=Ocorreu um erro ao processar a solicitação.
