--- a/resources/src/main/resources/messages_en.properties
+++ b/resources/src/main/resources/messages_en.properties
@@ -34,7 +34,9 @@ DOM-025=The searched tag does not exist.
 DOM-026=I have already had a tage registered with this code.
 DOM-027=Days on the System has not been set, please start the system correctly.
 DOM-028=Start date is higher than end date.
+DOM-029=A data: {0}, já possui vínculo com a Tag.
 
+DOM-996=Acesso negado.
 DOM-997=Access denied.
 DOM-998=Allowed types for field ''{0}'' are as follows: {1}.
 DOM-999=An error occurred while processing the request.
