Criação do Swagger

--- a/resources/src/main/resources/messages_en.properties
+++ b/resources/src/main/resources/messages_en.properties
@@ -1,44 +1,44 @@
-DOM-001=The attributes informed do not match what was expected. Please check the method documentation.
-DOM-002=The requested configuration does not exist, please check with the support team.
-DOM-003=The application has already been initialized, and cannot redo the process.
-DOM-004=Country name is invalid or does not contain in base.
-DOM-005=Fixed holiday sought does not exist.
-DOM-006=The country sought does not exist.
-DOM-007=The wanted state does not exist.
-DOM-008=The Searched City does not exist.
-DOM-009=The Holiday sought does not exist.
-DOM-010=You already have a country with the name on it, please state another name.
-DOM-011=You already have a country with the code entered, please inform another code.
-DOM-012=You already have a country with the acronym informed, please inform another acronym.
-DOM-013=You already have a state that contains the same name, country and acronym, please inform other data.
-DOM-014=You already have a state that contains the same country and acronym, please report other data.
-DOM-015=You already have a city that contains the same code, acronym and state, please inform other data.
-DOM-016=You already have a city that contains the same name and state, please inform other data.
-DOM-017=You already have a city that contains the same code and state, please inform other data.
-DOM-018=You already have a fixed holiday that contains the same day, month and country, please inform other data.
-DOM-019=The day and month reported is invalid, please inform another day and month.
-DOM-020=The wanted Day does not exist
-DOM-021=You Already have a holiday with that day, please inform another day.
-DOM-022=The type of holiday you are told that you must inform the time it starts.
-DOM-023=There is already a request registers in the system, checks the parameters reported.
-DOM-024=The parameter to validate the request was not found.
-DOM-025=The searched tag does not exist.
-DOM-026=I have already had a tage registered with this code.
-DOM-027=Days on the System has not been set, please start the system correctly.
-DOM-028=Start date is higher than end date.
-DOM-029=The date: {0}, already has a link with Tag.
-DOM-030=The business day could not be obtained.
+DOM-001=The provided attributes do not match the expected ones. Please refer to the method's documentation.
+DOM-002=The requested configuration does not exist. Please check with the support team.
+DOM-003=The application has already been initialized, and the process cannot be redone.
+DOM-004=The provided country name is invalid or not present in the database.
+DOM-005=The requested fixed holiday does not exist.
+DOM-006=The provided country does not exist.
+DOM-007=The provided state does not exist.
+DOM-008=The provided city does not exist.
+DOM-009=The provided holiday does not exist.
+DOM-010=A country with the given name already exists. Please provide another name.
+DOM-011=A country with the given code already exists. Please provide another code.
+DOM-012=A country with the given abbreviation already exists. Please provide another abbreviation.
+DOM-013=A state with the same name, country, and abbreviation already exists. Please provide different data.
+DOM-014=A state with the same country and abbreviation already exists. Please provide different data.
+DOM-015=A city with the same code, abbreviation, and state already exists. Please provide different data.
+DOM-016=A city with the same name and state already exists. Please provide different data.
+DOM-017=A city with the same code and state already exists. Please provide different data.
+DOM-018=A fixed holiday with the same day, month, and country already exists. Please provide different data.
+DOM-019=The provided day and month are invalid. Please provide different day and month values.
+DOM-020=The provided day does not exist.
+DOM-021=A holiday with this day already exists. Please provide a different day.
+DOM-022=For the given holiday type, it is necessary to provide the start time.
+DOM-023=A registration already exists in the system. Please verify the provided parameters.
+DOM-024=The parameter for validating the request could not be found.
+DOM-025=The requested tag does not exist.
+DOM-026=A tag with this code is already registered.
+DOM-027=The System Days have not been configured. Please initialize the system correctly.
+DOM-028=The initial date is greater than the final date.
+DOM-029=The date: {0}, is already associated with the tag.
+DOM-030=Unable to obtain the business day.
 
-DOM-996=Acesso negado.
+DOM-996=Access denied.
 DOM-997=Access denied.
-DOM-998=Allowed types for field ''{0}'' are as follows: {1}.
+DOM-998=The permitted types for the ''{0}'' field are as follows: {1}.
 DOM-999=An error occurred while processing the request.
 
-DOMV-001=The ''{0}'' field must be informed.
-DOMV-002=The value in the ''{0}' field must be greater than or equal to {1}.
-DOMV-003=It is mandatory to inform the ''{0}''.
-DOMV-004=The value in the ''{0}' field must be less than or equal to {1}.
-DOMV-005=A valid email must be informed.
-DOMV-006=Field ''{0}'' must be greater than or equal to {1} is less than or equal to {2}.
-DOMV-007=The ''{0}'' field must be formatd ''HH:mm:ss'' or ''HH:mm''.
-DOMV-008=It is allowed to enter a minimum of "{1}" and a maximum of "{2}" in the field "{0}".
+DOMV-001=The ''{0}'' field must be provided.
+DOMV-002=The value in the ''{0}'' field must be greater than or equal to {1}.
+DOMV-003=The ''{0}'' field is mandatory.
+DOMV-004=The value in the ''{0}'' field must be less than or equal to {1}.
+DOMV-005=A valid email must be provided.
+DOMV-006=The ''{0}'' field must be greater than or equal to {1} and less than or equal to {2}.
+DOMV-007=The ''{0}'' field must have the format ''HH:mm:ss'' or ''HH:mm''.
+DOMV-008=The ''{0}'' field allows a minimum of ''{1}'' and a maximum of ''{2}'' entries.
