--- a/resources/src/main/resources/messages.properties
+++ b/resources/src/main/resources/messages.properties
@@ -28,6 +28,7 @@ DOM-027=Os dias não foram configurados no sistema. Por favor, inicialize o sist
 DOM-028=A data inicial é posterior à data final.
 DOM-029=A data: {0} já possui vínculo com a tag.
 DOM-030=Não foi possível obter o dia útil.
+DOM-031=É necessário ter pelo menos um parâmetro para vincular a tag ao Dia.
 
 DOM-996=Acesso negado.
 DOM-997=Acesso negado.
