--- a/resources/src/main/resources/messages_en.properties
+++ b/resources/src/main/resources/messages_en.properties
@@ -28,6 +28,7 @@ DOM-027=The System Days have not been configured. Please initialize the system c
 DOM-028=The initial date is greater than the final date.
 DOM-029=The date: {0}, is already associated with the tag.
 DOM-030=Unable to obtain the business day.
+DOM-031=It must have at least one parameter to link the tag to the Day.
 
 DOM-996=Access denied.
 DOM-997=Access denied.
