--- a/resources/src/main/resources/messages.properties
+++ b/resources/src/main/resources/messages.properties
@@ -29,6 +29,7 @@ DOM-028=A data inicial é posterior à data final.
 DOM-029=A data: {0} já possui vínculo com a tag.
 DOM-030=Não foi possível obter o dia útil.
 DOM-031=É necessário ter pelo menos um parâmetro para vincular a tag ao Dia.
+DOM-032=A combinação de parâmetros informado está invalido, verifique os valores informados: {0}.
 
 DOM-996=Acesso negado.
 DOM-997=Acesso negado.
