Melhorias na criação e validação de Requests, validação e criação de request para realizar link de tags em batch

--- a/resources/src/main/resources/messages.properties
+++ b/resources/src/main/resources/messages.properties
@@ -28,8 +28,10 @@ DOM-027=Os dias não foram configurados no sistema. Por favor, inicialize o sist
 DOM-028=A data inicial é posterior à data final.
 DOM-029=A data: {0} já possui vínculo com a tag.
 DOM-030=Não foi possível obter o dia útil.
-DOM-031=É necessário ter pelo menos um parâmetro para vincular a tag ao Dia.
-DOM-032=A combinação de parâmetros informado está invalido, verifique os valores informados: {0}.
+DOM-031=É necessário ter pelo menos um parâmetro para vincular/desvincular a tag ao Dia.
+DOM-032=A combinação de parâmetros para gerar a data está invalido, verifique os valores informados.
+DOM-033=A combinação de parâmetros informados não retorna nenhum dia para ser vinculado/desvincular às tags.
+DOM-034=O ID da tag {0} não existe na base. Verifique os IDs informados.
 
 DOM-996=Acesso negado.
 DOM-997=Acesso negado.
