--- a/resources/src/main/resources/messages_en.properties
+++ b/resources/src/main/resources/messages_en.properties
@@ -28,8 +28,10 @@ DOM-027=The System Days have not been configured. Please initialize the system c
 DOM-028=The initial date is greater than the final date.
 DOM-029=The date: {0}, is already associated with the tag.
 DOM-030=Unable to obtain the business day.
-DOM-031=It must have at least one parameter to link the tag to the Day.
-DOM-032=A combinação de parâmetros informado está invalido, verifique os valores informados: {0}.
+DOM-031=It is necessary to have at least one parameter to link/unlink the tag to the Day.
+DOM-032=A combinação de parâmetros para gerar a data está invalido, verifique os valores informados.
+DOM-033=The combination of informed parameters does not return any day to be linked/unlinked to the tags.
+DOM-034=The tag ID {0} does not exist in the database. Please check the provided IDs.
 
 DOM-996=Access denied.
 DOM-997=Access denied.
